src/assets/scss/style.scss
@import "./layout.scss";
@import "./typography.scss";
@import "./transitions.scss";
@import "./elements/input.scss";
@import "./elements/button.scss";

*,
*:after,
*:before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

html, body{
  font-family: 'Roboto', Arial, Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;

  background-color: #fff;
  margin: 0;
}

.has-header{
  padding-top: 70px;
}

.title-underline{
  position: relative;

  &::after{
    position: absolute;
    left: 0;
    bottom: -8px;
    content: " ";
    width: 100px;
    height: 2px;
    background-color: $blue;
  }
}

.VueCarousel-navigation{
  &-next, &-prev{
    background-color: $blue !important;
    color: white !important;
  }

  &-next{
    border-radius: 0 100% 100% 0;
  }

  &-prev{
    border-radius: 100% 0 0 100%;
  }
}

